# FastApi_PhotoShare_Project

./: README.md  main.py  pyproject.toml  requirements.txt
PhooShare/: .env  Dockerfile  docker-compose.yml
PhooShare/app/: auth_utils.py  crud.py  db.py  main.py  models.py  schemas.py
PhooShare/app/routers/: auth.py  comments.py  photos.py  users.py
PhooShare/tests/: test_auth.py  test_comments.py
migrations/: env.py
src/conf/: config.py
src/database/: db.py  test_imports.py
src/repository/: ratings.py  users.py
src/routes/: auth.py
src/schemas/: users.py
src/services/: auth.py
tests/: conftest.py  test_load_settings.py  test_settings.py  test_unit_repository_ratings.py  test_unit_repository_tags.py  test_unit_repository_users.py
